Port to 1.21 and 1.21.1