@@ -1,24 +1,23 @@
 package net.ixdarklord.ultimine_addition.common.recipe;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonParseException;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.ixdarklord.ultimine_addition.common.data.item.ItemStorageData;
+import net.ixdarklord.ultimine_addition.common.item.StorageDataAbstractItem;
 import net.ixdarklord.ultimine_addition.common.recipe.ingredient.DataIngredient;
-import net.ixdarklord.ultimine_addition.core.UltimineAddition;
 import net.ixdarklord.ultimine_addition.core.Registration;
 import net.ixdarklord.ultimine_addition.util.ItemUtils;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.GsonHelper;
-import net.minecraft.world.inventory.CraftingContainer;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.CraftingBookCategory;
+import net.minecraft.world.item.crafting.CraftingInput;
 import net.minecraft.world.item.crafting.CustomRecipe;
 import net.minecraft.world.item.crafting.RecipeSerializer;
-import net.minecraft.world.item.crafting.ShapedRecipe;
 import net.minecraft.world.level.Level;
 import org.jetbrains.annotations.NotNull;
 
@@ -26,16 +25,14 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class ItemStorageDataRecipe extends CustomRecipe {
-    private final ResourceLocation id;
     final String group;
     final CraftingBookCategory category;
     final ItemStack result;
     final String storageName;
     final NonNullList<DataIngredient> ingredients;
 
-    public ItemStorageDataRecipe(ResourceLocation id, String group, CraftingBookCategory category, ItemStack result, String storageName, NonNullList<DataIngredient> ingredients) {
-        super(id, category);
-        this.id = id;
+    public ItemStorageDataRecipe(String group, CraftingBookCategory category, ItemStack result, String storageName, NonNullList<DataIngredient> ingredients) {
+        super(category);
         this.group = group;
         this.category = category;
         this.result = result;
@@ -44,15 +41,15 @@ public class ItemStorageDataRecipe extends CustomRecipe {
     }
 
     @Override
-    public @NotNull NonNullList<ItemStack> getRemainingItems(@NotNull CraftingContainer container) {
-        NonNullList<ItemStack> items = NonNullList.withSize(container.getContainerSize(), ItemStack.EMPTY);
+    public @NotNull NonNullList<ItemStack> getRemainingItems(CraftingInput input) {
+        NonNullList<ItemStack> items = NonNullList.withSize(input.items().size(), ItemStack.EMPTY);
         List<ItemUtils.ItemSorter> sorterList = new ArrayList<>();
         int sameItems = 0;
 
-        for(int i = 0; i < items.size(); ++i) {
-            if (this.result.is(container.getItem(i).getItem())) {
-                var data = new ItemStorageData(this.storageName).loadData(container.getItem(i));
-                sorterList.add(new ItemUtils.ItemSorter(container.getItem(i), i, data.getCapacity()));
+        for (int i = 0; i < items.size(); ++i) {
+            if (input.getItem(i).getItem() instanceof StorageDataAbstractItem item) {
+                var data = ItemStorageData.loadData(this.storageName, item.getMaxCapacity(), input.getItem(i));
+                sorterList.add(new ItemUtils.ItemSorter(input.getItem(i), i, data.getCapacity()));
                 sameItems++;
             }
         }
@@ -61,31 +58,27 @@ public class ItemStorageDataRecipe extends CustomRecipe {
 
         for (int i = 1; i < sorterList.size(); i++) {
             ItemStack stack = sorterList.get(i).item().copy();
-            new ItemStorageData(this.storageName).loadData(stack).setCapacity(0).saveData(stack);
+            var item = (StorageDataAbstractItem) stack.getItem();
+            ItemStorageData.loadData(this.storageName, item.getMaxCapacity(), stack).setCapacity(0).saveData(stack);
             items.set(sorterList.get(i).slotId(), stack);
         }
         return items;
     }
 
     @Override
-    public boolean matches(@NotNull CraftingContainer container, @NotNull Level level) {
-        NonNullList<ItemStack> items = NonNullList.withSize(container.getContainerSize(), ItemStack.EMPTY);
-        List<ItemUtils.ItemSorter> sorterList = new ArrayList<>();
-        for (int i = 0; i < container.getContainerSize(); i++) {
-            if (!container.getItem(i).isEmpty()) items.set(i, container.getItem(i));
-        }
-
+    public boolean matches(CraftingInput input, @NotNull Level level) {
         int capacity = 0;
         int matchedValue = 0;
-        for (ItemStack input : items) {
-            if (input.is(this.result.getItem())) {
-                var data = new ItemStorageData(this.storageName).loadData(input);
-                sorterList.add(new ItemUtils.ItemSorter(input, 0, data.getCapacity()));
+        List<ItemUtils.ItemSorter> sorterList = new ArrayList<>();
+        for (ItemStack itemStack : input.items()) {
+            ItemStack stack = itemStack.copy();
+            if (stack.getItem() instanceof StorageDataAbstractItem item) {
+                var data = ItemStorageData.loadData(this.storageName, item.getMaxCapacity(), stack);
+                sorterList.add(new ItemUtils.ItemSorter(stack, 0, data.getCapacity()));
                 capacity += data.getCapacity();
                 matchedValue++;
-            }
-            for (DataIngredient ingredient : this.ingredients) {
-                if (ingredient.test(input)) {
+            } else for (DataIngredient ingredient : this.ingredients) {
+                if (ingredient.test(stack)) {
                     capacity += ingredient.getAmount();
                     matchedValue++;
                 }
@@ -94,37 +87,34 @@ public class ItemStorageDataRecipe extends CustomRecipe {
 
         if (sorterList.isEmpty()) return false;
         sorterList.sort((o1, o2) -> Integer.compare(o2.order(), o1.order()));
-        if (sorterList.size() > 1) for (int i = 1; i < sorterList.size(); i++) {
-            var data = new ItemStorageData(this.storageName).loadData(sorterList.get(i).item());
-            if (data.getCapacity() == 0) return false;
-        }
+        if (sorterList.size() > 1)
+            for (int i = 1; i < sorterList.size(); i++) {
+                var data = ItemStorageData.loadData(this.storageName, 0, sorterList.get(i).item());
+                if (data.getCapacity() == 0) return false;
+            }
 
-        int size = items.stream().filter(stack -> !stack.isEmpty()).toList().size();
-        var data = new ItemStorageData(this.storageName).loadData(sorterList.get(0).item());
+        int size = input.items().stream().filter(stack -> !stack.isEmpty()).toList().size();
+        var data = ItemStorageData.loadData(this.storageName, 0, sorterList.getFirst().item());
         boolean isValid = matchedValue >= 2 && size == matchedValue;
         boolean isOverflow = capacity > data.getMaxCapacity();
         return isValid && !isOverflow;
     }
 
     @Override
-    public @NotNull ItemStack assemble(CraftingContainer container, RegistryAccess registryAccess) {
+    public @NotNull ItemStack assemble(CraftingInput input, HolderLookup.Provider registries) {
         int amount = 0;
-        var data = new ItemStorageData(this.storageName);
-        ItemStack itemStack = null;
-        for (int i = 0; i < container.getContainerSize(); i++) {
-            ItemStack stack = container.getItem(i);
+        for (ItemStack stack : input.items()) {
             if (stack.isEmpty()) continue;
+
             if (stack.is(this.result.getItem())) {
-                amount += data.loadData(stack).getCapacity();
-                itemStack = stack;
-            }
-            for (DataIngredient ingredient : this.ingredients) {
+                amount += ItemStorageData.loadData(this.storageName, 0, stack).getCapacity();
+            } else for (DataIngredient ingredient : this.ingredients) {
                 if (ingredient.test(stack)) amount += ingredient.getAmount();
             }
         }
-        ItemStack itemStack1 = this.result.copy();
-        data.loadData(itemStack == null ? itemStack1 : itemStack).setCapacity(amount).saveData(itemStack1);
-        return itemStack1;
+        ItemStack stack = this.result.copy();
+        ItemStorageData.loadData(this.storageName, ((StorageDataAbstractItem) stack.getItem()).getMaxCapacity(), stack).setCapacity(amount).saveData(stack);
+        return stack;
     }
 
     @Override
@@ -132,23 +122,12 @@ public class ItemStorageDataRecipe extends CustomRecipe {
         return width * height >= this.ingredients.size();
     }
 
-
     public CraftingBookCategory getCategory() {
         return category;
     }
 
     public ItemStack getResultItem() {
         return result;
-    }
-
-    @Override
-    public @NotNull ItemStack getResultItem(RegistryAccess registryAccess) {
-        return this.result;
-    }
-
-    @Override
-    public @NotNull ResourceLocation getId() {
-        return this.id;
     }
 
     public @NotNull NonNullList<DataIngredient> getDataIngredients() {
@@ -165,55 +144,60 @@ public class ItemStorageDataRecipe extends CustomRecipe {
     }
 
     public static class Serializer implements RecipeSerializer<ItemStorageDataRecipe> {
-        public static final ResourceLocation NAME = UltimineAddition.getLocation("item_storage_data");
-        public @NotNull ItemStorageDataRecipe fromJson(@NotNull ResourceLocation id, @NotNull JsonObject json) {
-            String group = GsonHelper.getAsString(json, "group", "");
-            CraftingBookCategory craftingBookCategory = CraftingBookCategory.CODEC.byName(GsonHelper.getAsString(json, "category", null), CraftingBookCategory.MISC);
-            NonNullList<DataIngredient> nonnulllist = itemsFromJson(GsonHelper.getAsJsonArray(json, "ingredients"));
-            if (nonnulllist.isEmpty()) {
-                throw new JsonParseException("No ingredients for shapeless recipe");
-            } else {
-                ItemStack stack = ShapedRecipe.itemStackFromJson(GsonHelper.getAsJsonObject(json, "result"));
-                String storageName = GsonHelper.getAsString(GsonHelper.getAsJsonObject(json, "result"), "storage_name", "storage");
-                return new ItemStorageDataRecipe(id, group, craftingBookCategory, stack, storageName, nonnulllist);
-            }
+        public static final MapCodec<ItemStorageDataRecipe> CODEC = RecordCodecBuilder.mapCodec(instance -> instance.group(
+                Codec.STRING.optionalFieldOf("group", "").forGetter(ItemStorageDataRecipe::getGroup),
+                CraftingBookCategory.CODEC.fieldOf("category").orElse(CraftingBookCategory.MISC).forGetter(ItemStorageDataRecipe::category),
+                ItemStack.STRICT_CODEC.fieldOf("result").forGetter(dataRecipe -> dataRecipe.result),
+                Codec.STRING.fieldOf("storage_name").forGetter(ItemStorageDataRecipe::getStorageName),
+                DataIngredient.CODEC_NONEMPTY.listOf().fieldOf("ingredients").flatXmap(list -> {
+                    DataIngredient[] ingredients = list.stream().filter(ingredient -> !ingredient.isEmpty()).toArray(DataIngredient[]::new);
+                    if (ingredients.length == 0) {
+                        return DataResult.error(() -> "No ingredients for ItemStorageDataRecipe");
+                    } else {
+                        return ingredients.length > 9
+                                ? DataResult.error(() -> "Too many ingredients for ItemStorageDataRecipe")
+                                : DataResult.success(NonNullList.of(DataIngredient.EMPTY, ingredients));
+                    }
+                }, DataResult::success).forGetter(ItemStorageDataRecipe::getDataIngredients)
+        ).apply(instance, ItemStorageDataRecipe::new));
+
+        public static final StreamCodec<RegistryFriendlyByteBuf, ItemStorageDataRecipe> STREAM_CODEC = StreamCodec.of(ItemStorageDataRecipe.Serializer::toNetwork, ItemStorageDataRecipe.Serializer::fromNetwork);
+
+
+        @Override
+        public @NotNull MapCodec<ItemStorageDataRecipe> codec() {
+            return CODEC;
         }
 
-        private static NonNullList<DataIngredient> itemsFromJson(JsonArray pIngredientArray) {
-            NonNullList<DataIngredient> nonnulllist = NonNullList.create();
-
-            for(int i = 0; i < pIngredientArray.size(); ++i) {
-                DataIngredient ingredient = DataIngredient.fromJson(pIngredientArray.get(i));
-                nonnulllist.add(ingredient);
-            }
-
-            return nonnulllist;
+        @Override
+        public @NotNull StreamCodec<RegistryFriendlyByteBuf, ItemStorageDataRecipe> streamCodec() {
+            return STREAM_CODEC;
         }
 
-        public @NotNull ItemStorageDataRecipe fromNetwork(@NotNull ResourceLocation id, FriendlyByteBuf buffer) {
-            String group = buffer.readUtf();
-            CraftingBookCategory craftingBookCategory = buffer.readEnum(CraftingBookCategory.class);
-            int i = buffer.readVarInt();
+        private static @NotNull ItemStorageDataRecipe fromNetwork(RegistryFriendlyByteBuf buf) {
+            String group = buf.readUtf();
+            CraftingBookCategory category = buf.readEnum(CraftingBookCategory.class);
+
+            int i = buf.readVarInt();
             NonNullList<DataIngredient> nonnulllist = NonNullList.withSize(i, DataIngredient.EMPTY);
+            nonnulllist.replaceAll(ignored -> DataIngredient.CONTENTS_STREAM_CODEC.decode(buf));
 
-            nonnulllist.replaceAll(ignored -> DataIngredient.fromNetwork(buffer));
-
-            ItemStack itemstack = buffer.readItem();
-            String storageName = buffer.readUtf();
-            return new ItemStorageDataRecipe(id, group, craftingBookCategory, itemstack, storageName, nonnulllist);
+            ItemStack stack = ItemStack.STREAM_CODEC.decode(buf);
+            String storageName = buf.readUtf();
+            return new ItemStorageDataRecipe(group, category, stack, storageName, nonnulllist);
         }
 
-        public void toNetwork(FriendlyByteBuf buffer, ItemStorageDataRecipe recipe) {
-            buffer.writeUtf(recipe.getGroup());
-            buffer.writeEnum(recipe.category);
-            buffer.writeVarInt(recipe.getDataIngredients().size());
+        private static void toNetwork(RegistryFriendlyByteBuf buf, ItemStorageDataRecipe recipe) {
+            buf.writeUtf(recipe.group);
+            buf.writeEnum(recipe.category);
+            buf.writeVarInt(recipe.ingredients.size());
 
             for (DataIngredient ingredient : recipe.ingredients) {
-                ingredient.toNetwork(buffer);
+                DataIngredient.CONTENTS_STREAM_CODEC.encode(buf, ingredient);
             }
 
-            buffer.writeItem(recipe.result);
-            buffer.writeUtf(recipe.getStorageName());
+            ItemStack.STREAM_CODEC.encode(buf, recipe.result);
+            buf.writeUtf(recipe.getStorageName());
         }
     }
 }
