@@ -1,39 +1,45 @@
 package net.ixdarklord.ultimine_addition.common.recipe.ingredient;
 
-import com.google.gson.*;
+import com.google.common.collect.Lists;
+import com.mojang.datafixers.util.Either;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import it.unimi.dsi.fastutil.ints.IntArrayList;
 import it.unimi.dsi.fastutil.ints.IntComparators;
 import it.unimi.dsi.fastutil.ints.IntList;
 import net.ixdarklord.ultimine_addition.common.data.item.MiningSkillCardData;
 import net.ixdarklord.ultimine_addition.common.item.MiningSkillCardItem;
-import net.ixdarklord.ultimine_addition.core.Registration;
 import net.minecraft.core.Holder;
 import net.minecraft.core.NonNullList;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.ByteBufCodecs;
+import net.minecraft.network.codec.StreamCodec;
 import net.minecraft.tags.TagKey;
-import net.minecraft.util.GsonHelper;
 import net.minecraft.world.entity.player.StackedContents;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.ShapedRecipe;
 import net.minecraft.world.level.ItemLike;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
-import java.util.stream.StreamSupport;
 
 public final class MCIngredient implements Predicate<ItemStack> {
     public static final MCIngredient EMPTY = new MCIngredient(Stream.empty());
+    public static final Codec<MCIngredient> CODEC;
+    public static final Codec<MCIngredient> CODEC_NONEMPTY;
+    public static final StreamCodec<RegistryFriendlyByteBuf, MCIngredient> CONTENTS_STREAM_CODEC;
+
     private final Value[] values;
     @Nullable
     private ItemStack[] itemStacks;
-    private MiningSkillCardItem.Tier tier;
+    private Optional<MiningSkillCardItem.Tier> tier;
     @Nullable
     private IntList stackingIds;
 
@@ -41,22 +47,25 @@ public final class MCIngredient implements Predicate<ItemStack> {
         this.values = stream.toArray(Value[]::new);
     }
 
+    private MCIngredient(Value[] values) {
+        this.values = values;
+    }
+
     public ItemStack[] getItems() {
         this.dissolve();
         return this.itemStacks;
     }
 
-    public MiningSkillCardItem.Tier getTier() {
+    public Optional<MiningSkillCardItem.Tier> getTier() {
         this.dissolve();
         return this.tier;
     }
 
     private void dissolve() {
         if (this.itemStacks == null) {
-            this.itemStacks = Arrays.stream(this.values).flatMap(value ->
-                    value.getItems().stream()).distinct().toArray(ItemStack[]::new);
+            this.itemStacks = Arrays.stream(this.values).flatMap(value -> value.getItems().stream()).distinct().toArray(ItemStack[]::new);
         }
-        this.tier = Arrays.stream(this.values).map(Value::getTier).toList().get(0);
+        this.tier = Arrays.stream(this.values).map(Value::getTier).toList().getFirst();
     }
 
     public boolean test(@Nullable ItemStack stack) {
@@ -67,11 +76,9 @@ public final class MCIngredient implements Predicate<ItemStack> {
         ItemStack[] stacks = this.itemStacks;
         for (ItemStack itemStack : stacks) {
             if (itemStack.is(stack.getItem())) {
-                if (this.tier != null) {
-                    if (itemStack.is(stack.getItem())) {
-                        var cardData = new MiningSkillCardData().loadData(stack);
-                        return this.tier.equals(cardData.getTier());
-                    }
+                if (this.tier.isPresent()) {
+                    var cardData = MiningSkillCardData.loadData(stack);
+                    return this.tier.get().equals(cardData.getTier());
                 } else return true;
             }
         }
@@ -80,11 +87,9 @@ public final class MCIngredient implements Predicate<ItemStack> {
 
     public IntList getStackingIds() {
         if (this.stackingIds == null) {
-            this.dissolve();
-            this.stackingIds = new IntArrayList(this.itemStacks.length);
-            ItemStack[] var1 = this.itemStacks;
-
-            for (ItemStack itemStack : var1) {
+            ItemStack[] itemStacks = this.getItems();
+            this.stackingIds = new IntArrayList(itemStacks.length);
+            for (ItemStack itemStack : itemStacks) {
                 this.stackingIds.add(StackedContents.getStackingIndex(itemStack));
             }
 
@@ -94,33 +99,22 @@ public final class MCIngredient implements Predicate<ItemStack> {
         return this.stackingIds;
     }
 
-    public void toNetwork(FriendlyByteBuf buffer) {
-        this.dissolve();
-        buffer.writeBoolean(this.tier != null);
-        if (this.tier != null) buffer.writeInt(this.tier.getValue());
-        buffer.writeCollection(Arrays.asList(this.itemStacks), FriendlyByteBuf::writeItem);
+    public boolean isEmpty() {
+        return this.values.length == 0;
     }
 
-    public JsonElement toJson() {
-        if (this.values.length == 1) {
-            return this.values[0].serialize();
+    @Override
+    public boolean equals(Object object) {
+        if (object instanceof MCIngredient ingredient) {
+            return Arrays.equals(this.values, ingredient.values);
         } else {
-            JsonArray jsonArray = new JsonArray();
-            for (Value value : this.values) {
-                jsonArray.add(value.serialize());
-            }
-
-            return jsonArray;
+            return false;
         }
     }
 
-    public boolean isEmpty() {
-        return this.values.length == 0 && (this.itemStacks == null || this.itemStacks.length == 0) && (this.stackingIds == null || this.stackingIds.isEmpty());
-    }
-
     private static MCIngredient fromValues(Stream<? extends Value> stream) {
-        MCIngredient DataIngredient = new MCIngredient(stream);
-        return DataIngredient.values.length == 0 ? EMPTY : DataIngredient;
+        MCIngredient mcIngredient = new MCIngredient(stream);
+        return mcIngredient.values.length == 0 ? EMPTY : mcIngredient;
     }
 
     public static MCIngredient of() {
@@ -136,11 +130,11 @@ public final class MCIngredient implements Predicate<ItemStack> {
     }
 
     public static MCIngredient of(MiningSkillCardItem.Tier tier, Stream<ItemStack> stacks) {
-        return fromValues(stacks.filter(itemStack -> !itemStack.isEmpty()).map(stack -> new ItemValue(stack, tier)));
+        return fromValues(stacks.filter(itemStack -> !itemStack.isEmpty()).map(stack -> new ItemValue(stack, Optional.ofNullable(tier))));
     }
 
     public static MCIngredient of(MiningSkillCardItem.Tier tier, TagKey<Item> tag) {
-        return fromValues(Stream.of(new TagValue(tag, tier)));
+        return fromValues(Stream.of(new TagValue(tag, Optional.ofNullable(tier))));
     }
 
     public static NonNullList<Ingredient> toNormal(NonNullList<MCIngredient> inputs) {
@@ -151,11 +145,7 @@ public final class MCIngredient implements Predicate<ItemStack> {
                 .filter(ingredient -> !Arrays.stream(ingredient.values)
                         .filter(value -> value instanceof ItemValue).toList().isEmpty())
                 .map(ingredient -> {
-                    ItemStack[] items = Arrays.stream(ingredient.getItems()).peek(stack -> {
-                        if (stack.getItem() instanceof MiningSkillCardItem item && ingredient.getTier() != null) {
-                            item.getData(stack).setTier(ingredient.getTier()).saveData(stack);
-                        }
-                    }).toArray(ItemStack[]::new);
+                    ItemStack[] items = Arrays.stream(ingredient.getItems()).toArray(ItemStack[]::new);
                     return Ingredient.of(items);
                 })
                 .toList()
@@ -165,118 +155,124 @@ public final class MCIngredient implements Predicate<ItemStack> {
         result.addAll(inputs.stream()
                 .filter(ingredient -> !Arrays.stream(ingredient.values).filter(value -> value instanceof TagValue).toList().isEmpty())
                 .map(ingredient -> {
-                    Stream<Ingredient.TagValue> tagValueStream = Arrays.stream(ingredient.values)
+                    Optional<TagKey<Item>> optional = Arrays.stream(ingredient.values)
                             .filter(value -> value instanceof TagValue)
-                            .map(value -> new Ingredient.TagValue(((TagValue) value).tag));
-                    return Ingredient.fromValues(tagValueStream);
+                            .map(value -> ((TagValue) value).tag)
+                            .findFirst();
+                    return optional.map(Ingredient::of).orElse(Ingredient.EMPTY);
                 })
                 .toList()
         );
         return result;
     }
 
-    public static MCIngredient fromNetwork(FriendlyByteBuf buffer) {
-        MiningSkillCardItem.Tier tier = buffer.readBoolean() ? MiningSkillCardItem.Tier.fromInt(buffer.readInt()) : null;
-        return fromValues(buffer.readList(FriendlyByteBuf::readItem).stream().map(stack -> new ItemValue(stack, tier)));
+    private static Codec<MCIngredient> codec(boolean allowEmpty) {
+        Codec<Value[]> codec = Codec.list(Value.CODEC)
+                .comapFlatMap((list) -> !allowEmpty && list.isEmpty()
+                        ? DataResult.error(() -> "Item array cannot be empty, at least one item must be defined")
+                        : DataResult.success(list.toArray(new Value[0])), List::of);
+
+        return Codec.either(codec, Value.CODEC)
+                .flatComapMap((either) -> either.map(MCIngredient::new, (value) -> new MCIngredient(new Value[]{value})),
+                        (ingredient) -> {
+                            if (ingredient.values.length == 1)
+                                return DataResult.success(Either.right(ingredient.values[0]));
+                            else return ingredient.values.length == 0 && !allowEmpty
+                                    ? DataResult.error(() -> "Item array cannot be empty, at least one item must be defined")
+                                    : DataResult.success(Either.left(ingredient.values));
+                        }
+                );
     }
 
-    public static MCIngredient fromJson(@Nullable JsonElement json) {
-        if (json != null && !json.isJsonNull()) {
-            if (json.isJsonObject()) {
-                return fromValues(Stream.of(valueFromJson(json.getAsJsonObject())));
-            } else if (json.isJsonArray()) {
-                JsonArray jsonArray = json.getAsJsonArray();
-                if (jsonArray.isEmpty()) {
-                    throw new JsonSyntaxException("Item array cannot be empty, at least one item must be defined");
-                } else {
-                    return fromValues(StreamSupport.stream(jsonArray.spliterator(), false).map((jsonElement) ->
-                            valueFromJson(GsonHelper.convertToJsonObject(jsonElement, "item"))));
-                }
-            } else {
-                throw new JsonSyntaxException("Expected item to be object or array of objects");
+    static {
+        CONTENTS_STREAM_CODEC = new StreamCodec<>() {
+            @Override
+            public @NotNull MCIngredient decode(RegistryFriendlyByteBuf buf) {
+                return MCIngredient.of(
+                        ByteBufCodecs.optional(MiningSkillCardItem.Tier.STREAM_CODEC).decode(buf).orElse(null),
+                        ItemStack.LIST_STREAM_CODEC.decode(buf).stream());
             }
-        } else {
-            throw new JsonSyntaxException("Item cannot be null");
-        }
+
+            @Override
+            public void encode(RegistryFriendlyByteBuf buf, MCIngredient ingredient) {
+                ByteBufCodecs.optional(MiningSkillCardItem.Tier.STREAM_CODEC).encode(buf, ingredient.getTier());
+                ItemStack.LIST_STREAM_CODEC.encode(buf, Arrays.stream(ingredient.getItems()).toList());
+            }
+        };
+
+        CODEC = codec(true);
+
+        CODEC_NONEMPTY = codec(false);
     }
 
-    private static Value valueFromJson(JsonObject json) {
-        if (json.has("item") && json.has("tag")) {
-            throw new JsonParseException("An MCIngredient entry is either a tag or an item, not both");
-        } else if (json.has("item")) {
-            Item item = ShapedRecipe.itemFromJson(json);
-            MiningSkillCardItem.Tier tier = json.has("tier") ? MiningSkillCardItem.Tier.fromInt(GsonHelper.getAsInt(json, "tier")) : null;
-            return new ItemValue(new ItemStack(item), tier);
-        } else if (json.has("tag")) {
-            ResourceLocation resourceLocation = new ResourceLocation(GsonHelper.getAsString(json, "tag"));
-            TagKey<Item> tagKey = TagKey.create(Registries.ITEM, resourceLocation);
-            MiningSkillCardItem.Tier tier = json.has("tier") ? MiningSkillCardItem.Tier.fromInt(GsonHelper.getAsInt(json, "tier")) : null;
-            return new TagValue(tagKey, tier);
-        } else {
-            throw new JsonParseException("An MCIngredient entry needs either a tag or an item");
-        }
-    }
+    private interface Value {
+        Codec<Value> CODEC = Codec.xor(ItemValue.CODEC, TagValue.CODEC).xmap(either -> either.map(itemValue -> itemValue, tagValue -> tagValue), value -> {
+            if (value instanceof ItemValue itemValue) {
+                return Either.left(itemValue);
+            } else if (value instanceof TagValue tagValue) {
+                return Either.right(tagValue);
+            } else throw new UnsupportedOperationException("This is neither an item value nor a tag value.");
+        });
 
-    interface Value {
         Collection<ItemStack> getItems();
-        MiningSkillCardItem.Tier getTier();
 
-        JsonObject serialize();
+        Optional<MiningSkillCardItem.Tier> getTier();
     }
-    static class TagValue implements Value {
-        protected final TagKey<Item> tag;
-        private final MiningSkillCardItem.Tier tier;
 
-        TagValue(TagKey<Item> tagKey, @Nullable MiningSkillCardItem.Tier tier) {
-            this.tag = tagKey;
-            this.tier = tier;
+    private record TagValue(TagKey<Item> tag, Optional<MiningSkillCardItem.Tier> tier) implements Value {
+        static final Codec<TagValue> CODEC = RecordCodecBuilder.create(instance -> instance.group(
+                TagKey.codec(Registries.ITEM).fieldOf("tag").forGetter(TagValue::tag),
+                MiningSkillCardItem.Tier.CODEC.optionalFieldOf("card_tier").forGetter(TagValue::getTier)
+        ).apply(instance, TagValue::new));
+
+        @Override
+        public boolean equals(Object object) {
+            if (object instanceof TagValue tagValue) {
+                return tagValue.tag.location().equals(this.tag.location());
+            } else {
+                return false;
+            }
         }
 
         public Collection<ItemStack> getItems() {
-            List<ItemStack> list = new ArrayList<>();
-            for (Holder<Item> holder : BuiltInRegistries.ITEM.getTagOrEmpty(this.tag)) {
-                ItemStack stack = new ItemStack(holder);
-                if (this.tier != null && holder instanceof MiningSkillCardItem item) {
-                    item.getData(stack).setTier(this.tier).saveData(stack);
+            List<ItemStack> list = Lists.newArrayList();
+            for (Holder<Item> item : BuiltInRegistries.ITEM.getTagOrEmpty(this.tag)) {
+                ItemStack stack = new ItemStack(item);
+                if (this.tier.isPresent() && stack.getItem() instanceof MiningSkillCardItem cardItem) {
+                    cardItem.getData(stack).setTier(this.tier.get()).saveData(stack);
                 }
                 list.add(stack);
             }
             return list;
         }
 
-        public @Nullable MiningSkillCardItem.Tier getTier() {
+        @Override
+        public Optional<MiningSkillCardItem.Tier> getTier() {
             return this.tier;
         }
 
-        public JsonObject serialize() {
-            JsonObject jsonObject = new JsonObject();
-            jsonObject.addProperty("tag", this.tag.location().toString());
-            if (getTier() != null) jsonObject.addProperty("tier", getTier().getValue());
-            return jsonObject;
+        @Override
+        public TagKey<Item> tag() {
+            return this.tag;
         }
     }
-    static class ItemValue implements Value {
-        private final ItemStack stack;
-        private final MiningSkillCardItem.Tier tier;
 
-        ItemValue(ItemStack stack, @Nullable MiningSkillCardItem.Tier tier) {
-            this.stack = stack;
-            this.tier = tier;
-        }
+    private record ItemValue(ItemStack stack, Optional<MiningSkillCardItem.Tier> tier) implements Value {
+        static final Codec<ItemValue> CODEC = RecordCodecBuilder.create(instance -> instance.group(
+                ItemStack.SIMPLE_ITEM_CODEC.fieldOf("item").forGetter(ItemValue::stack),
+                MiningSkillCardItem.Tier.CODEC.optionalFieldOf("card_tier").forGetter(ItemValue::getTier)
+        ).apply(instance, ItemValue::new));
 
         public Collection<ItemStack> getItems() {
+            if (this.tier.isPresent() && this.stack.getItem() instanceof MiningSkillCardItem cardItem) {
+                cardItem.getData(this.stack).setTier(this.tier.get()).saveData(this.stack);
+            }
             return Collections.singleton(this.stack);
         }
 
-        public @Nullable MiningSkillCardItem.Tier getTier() {
+        @Override
+        public Optional<MiningSkillCardItem.Tier> getTier() {
             return this.tier;
-        }
-
-        public JsonObject serialize() {
-            JsonObject jsonObject = new JsonObject();
-            jsonObject.addProperty("item", Objects.requireNonNull(Registration.ITEMS.getRegistrar().getId(this.stack.getItem())).toString());
-            if (getTier() != null) jsonObject.addProperty("tier", getTier().getValue());
-            return jsonObject;
         }
     }
 }
